Added field for checking secret word, for adding first user SUPER_ADMIN_ROLE

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,9 +1,12 @@
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
-    service:                               # this lines
-        mailer: fos_user.mailer.twig_swift # this lines
+    service:
+        mailer: fos_user.mailer.twig_swift
     user_class: NCMF\UserBundle\Entity\User
     from_email:
         address: "robot@example.com"
         sender_name: "Robot"
+    registration:
+        form:
+            type: NCMF\UserBundle\Form\Type\RegistrationFormType
