Changed config, secutrity and traslations

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -12,5 +12,7 @@ fos_user:
     registration:
         form:
             type: NCMF\UserBundle\Form\Type\RegistrationFormType
+        confirmation:
+            enabled: true
 framework:
     translator: { fallbacks: ['%locale%'] }
