Added UserInfo mapped super class

--- a/Resources/config/doctrine/User.orm.yml
+++ b/Resources/config/doctrine/User.orm.yml
@@ -6,4 +6,8 @@ NCMF\UserBundle\Entity\User:
             type: integer
             generator:
                 strategy: AUTO
+    oneToOne:
+        userInfo:
+            targetEntity: UserInfo
+            mappedBy: user
     lifecycleCallbacks: {  }
