--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "php": "^7.0",
     "symfony/framework-bundle": "^2.7 || ^3.0",
-    "friendsofsymfony/user-bundle": "^2.0"
+    "friendsofsymfony/user-bundle": "2.0.*"
   },
   "require-dev": {
   },
