--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "require": {
     "php": "^7.0",
     "symfony/framework-bundle": "^2.7 || ^3.0",
-    "friendsofsymfony/user-bundle": "2.0.*"
+    "paragonie/random_compat": "2.0.9",
+    "friendsofsymfony/user-bundle": "2.*"
   },
   "require-dev": {
   },
