--- a/Resources/config/doctrine/UserInfo.orm.yml
+++ b/Resources/config/doctrine/UserInfo.orm.yml
@@ -12,7 +12,7 @@ NCMF\UserBundle\Entity\UserInfo:
         name:
             type: string
             length: 255
-            nullable: false
+            nullable: true
         secondName:
             type: string
             length: 255
